public/style.css
body{
    margin : 0px;
    padding : 0px;
}

#video-grid{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
    gap:10px;
    width:100%;
    padding:10px;
}

video{
    width:100%;
    aspect-ratio:16/9;
    object-fit:cover;
    border-radius:20px;
}

.main{
    height : 100vh;
    width:100vw;
    display : flex;
    position:relative;
    overflow:hidden;
}

.main_left{
    position: relative;
    flex : 1;
    display : flex;
    flex-direction: column;
}

/*toggled class*/
.main_left.active{
    flex:0.8;
    display:flex;
    flex-direction: column;
}

.main_right{
    /*position:relative;*/
    width:0px;
    overflow:hidden;
    transition: 0.5s;
}

/*toggled class*/
.main_right.active{
    flex:0.2;
    overflow:auto;
    transition:0.1s
}

.main_videos{
    flex-grow: 1;
    background-color: black;
    display : flex;
    justify-content: center;
    align-items: flex-start;
    overflow-y: auto;
}

.main_controls{
    display : flex;
    background-color: black;
    padding : 5px;
    justify-content: space-between;
}

.main_controls_block{
    display : flex;
}

.main_controls_button{
    display : flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 8px 5px;
    min-width: 50px;
    cursor: pointer;
}

.main_controls_button:hover{
    opacity: 0.75;
}

i{
    color : white;
    background-color: grey;
    border-radius : 50%;
    border : 1px solid grey;
    padding : 10px;
}

span{
    color : white;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.call{
    background-color: red;
}

.main_right{
    display: flex;
    position: relative;
    z-index:2000;
    flex-direction:column;
    border-left: 1px solid #3D3D42;
}

.main_chat_window{
    flex-grow:1;
    overflow-y: scroll;
}

.messages{
    list-style: none;
}

.main_message_container{
    display:flex;
    border:none;
    background-color: rgb(221, 220, 220);
    border-radius: 10px;
    padding:22px 12px;
    margin:10px;
}

.main_message_container input{
    border:none;
    background-color: transparent;
    flex-grow: 1;
}

.main_message_container input:focus{
    outline:none;
}

::placeholder{
    color:black;
    opacity: 0.5;
}

.whiteboard{
    position: absolute;
    width: 100%;
    height: 88%;
    background-color: rgb(255, 255, 255);
    transform: translateX(100%);
    z-index: 100;
    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1);
    
}

.bring-in{
    transform: translateX(0);
}

.active-eraser i {
    background-color: #007bff;
    border-color: #007bff;
}

.eraser-cursor {
    position: absolute;
    border: 1px solid black;
    border-radius: 50%;
    pointer-events: none;
    transform: translate(-50%, -50%);
    display: none;
    z-index: 1001;
    background-color: rgba(0,0,0,0.1);
}

.whiteboard.erasing canvas {
    cursor: none;
}

